--- a/src/app/pages/materials-asm1/materials-asm1.component.html
+++ b/src/app/pages/materials-asm1/materials-asm1.component.html
@@ -60,6 +60,22 @@
               <i class="material-icons">bug_report</i>
               Debug Materials Collection
             </a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="testOutboundData()">
+              <i class="material-icons">assessment</i>
+              Test Outbound Data
+            </a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="syncAllExportedFromOutbound()">
+              <i class="material-icons">sync</i>
+              Sync from Outbound
+            </a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="testSyncWithDebug()">
+              <i class="material-icons">bug_report</i>
+              Test Sync with Debug
+            </a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="testDataLoading()">
+              <i class="material-icons">data_usage</i>
+              Test Data Loading
+            </a>
             <a class="dropdown-item text-danger" href="javascript:void(0)" (click)="deleteMaterialsWithoutStandardPacking()">
               <i class="material-icons">delete_forever</i>
               Xóa mã không có Standard Packing
