--- a/src/app/pages/materials-asm1/materials-asm1.component.html
+++ b/src/app/pages/materials-asm1/materials-asm1.component.html
@@ -98,6 +98,10 @@
               <i class="material-icons">merge_type</i>
               Gộp dòng trùng lặp
             </a>
+            <a class="dropdown-item text-info" href="javascript:void(0)" (click)="updateAllLocationsToNewFormat()">
+              <i class="material-icons">location_on</i>
+              Cập nhật vị trí sang format mới
+            </a>
           </div>
         </div>
         
